--- a/app/src/main/res/layout/activity_synthese_mois.xml
+++ b/app/src/main/res/layout/activity_synthese_mois.xml
@@ -50,6 +50,7 @@
         android:id="@+id/retour"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="clique_retour"
         android:text="Retour" />
 
 
