--- a/app/src/main/res/layout/frais_infos.xml
+++ b/app/src/main/res/layout/frais_infos.xml
@@ -131,7 +131,7 @@ android:padding="6dip" >
         android:layout_marginLeft="38dp"
         android:layout_weight="1"
         android:baselineAlignBottom="false"
-        android:onClick="deleteData"
+        android:onClick="doDeleteOnClick"
         app:srcCompat="@android:drawable/ic_menu_delete" />
 
 
