--- a/app/src/main/res/layout/activity_synthese_mois.xml
+++ b/app/src/main/res/layout/activity_synthese_mois.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center"
-                android:text="Historique des frais au forfait"
+                android:text="Historique des frais"
                 android:textSize="24sp"
                 tools:layout_editor_absoluteX="157dp"
                 tools:layout_editor_absoluteY="154dp" />
